--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
+  "extends": "airbnb-base",
   "env": {
-    "node": true
+    "node": true,
+    "jest": true
   },
   "parserOptions": {
     "ecmaVersion": 8
