--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
     "md-links": "./index.js"
   },
   "scripts": {
-    "start": "node start.js"
+    "start": "node start.js",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "chalk": "^5.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.6.1"
   }
 }
