--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "md-links": "./index.js"
   },
   "scripts": {
-    "start": "node start.js",
+    "start": "nodemon start.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.6.1"
+    "jest": "^29.6.1",
+    "nodemon": "^3.0.1"
   }
 }
